--- a/local/pressure-washing-bessacarr.html
+++ b/local/pressure-washing-bessacarr.html
@@ -9,7 +9,7 @@
 <title>Professional Pressure Washing in Bessacarr | Instant Online Quote</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-bessacarr.html">
-<meta name="description" content="">
+<meta name="description" content="Professional pressure washing in Bessacarr for driveways, patios and paths. Reliable local service with great results. Free quotes available.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
