--- a/local/pressure-washing-selby.html
+++ b/local/pressure-washing-selby.html
@@ -6,10 +6,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title>Professional Pressure Washing in Bessacarr | Instant Online Quote</title>
+<title>Selby Pressure Washing Services | Instant Online Quote</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-bessacarr.html">
-<meta name="description" content="">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-selby.html">
+<meta name="description" content="Restore your driveway and patio with expert pressure washing in Bessacarr. Local and fully insured. Get Instant online quote today.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
@@ -340,7 +340,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/local/pressure-washing-bessacarr.html",
+"url": "https://homerepairs4u.com/local/pressure-washing-selby.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
@@ -353,10 +353,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 },
 "geo": {
 "@type": "GeoCoordinates",
-"latitude": 53.5019,
-"longitude": -1.0862
+"latitude": 53.7880,
+"longitude": -1.0786
 },
-"areaServed": "Bessacarr",
+"areaServed": "Selby",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
